chore: add translation

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3430,5 +3430,6 @@
   "ROR (Rate Of Return)": "ROR (Rate Of Return)",
   "1 Week": "1 Week",
   "1 Month": "1 Month",
-  "ROR Calculated based on historical snapshots factoring inhistorical price of the underlying tokens": "ROR Calculated based on historical snapshots factoring inhistorical price of the underlying tokens"
+  "ROR Calculated based on historical snapshots factoring inhistorical price of the underlying tokens": "ROR Calculated based on historical snapshots factoring inhistorical price of the underlying tokens",
+  "Since Launched": "Since Launched"
 }
