fix: Remove unnecessary redirect in next.config.mjs

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -2698,6 +2698,8 @@
   "Game & NFT": "Game & NFT",
   "Join Everyone's Favorite DEX Now!": "Join Everyone's Favorite DEX Now!",
   "Everyone's": "Everyone's",
+  "All-in-one DEX With": "All-in-one DEX With",
+  "Permissionless Pools": "Permissionless Pools",
   "Favorite": "Favorite",
   "DEX": "DEX",
   "Shaping the Future of Decentralized Trading:": "Shaping the Future of Decentralized Trading:",
@@ -2730,6 +2732,7 @@
   "Stake LP tokens, harvest CAKE": "Stake LP tokens, harvest CAKE",
   "Stake CAKE, earn various rewards": "Stake CAKE, earn various rewards",
   "Trade, earn, and own crypto on the all-in-one multichain DEX": "Trade, earn, and own crypto on the all-in-one multichain DEX",
+  "Trade, earn, and own various crypto in a trustworthy environment with user-friendly interface.": "Trade, earn, and own various crypto in a trustworthy environment with user-friendly interface.",
   "opBNB is LIVE!": "opBNB is LIVE!",
   "PancakeSwap Now Live on opBNB!": "PancakeSwap Now Live on opBNB!",
   "Unstaking from v2 farm?": "Unstaking from v2 farm?",
