feat: add perpetual stripe

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3427,5 +3427,11 @@
   "Lock Cake to get veCAKE on BSC to activate yield booster.": "Lock Cake to get veCAKE on BSC to activate yield booster.",
   "Sync veCAKE again to update yield booster": "Sync veCAKE again to update yield booster",
   "Basic": "Basic",
-  "Candlestick": "Candlestick"
+  "Candlestick": "Candlestick",
+  "Trade and Win": "Trade and Win",
+  "300,000 $ARB": "300,000 $ARB",
+  "on PancakeSwap Perpetuals v2!": "on PancakeSwap Perpetuals v2!",
+  "Trade on Perpetuals v2 to Win 300,000 ARB": "Trade on Perpetuals v2 to Win 300,000 ARB",
+  "Trade $5,000 on Perps v2 to Win from 300,000 ARB": "Trade $5,000 on Perps v2 to Win from 300,000 ARB",
+  "Trade at least $5,000 on perps v2 to win guaranteed reward": "Trade at least $5,000 on perps v2 to win guaranteed reward"
 }
