feat: Add candlestick to swap chart (#10063)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
This PR updates chart components in the Swap feature with new icons,
chart types, and data formatting.

### Detailed summary
- Added `Candlestick` chart type option
- Updated icons in the UI kit
- Improved data formatting in the chart components
- Renamed `SwapLineChart` to `PairPriceChart` in various files

> The following files were skipped due to too many changes:
`packages/uikit/src/components/Chart/PairPriceChart.tsx`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3425,5 +3425,7 @@
   "Stake CAKE to obtain bCAKE – to boost farm yields.": "Stake CAKE to obtain bCAKE – to boost farm yields.",
   "Switch chain to continue": "Switch chain to continue",
   "Lock Cake to get veCAKE on BSC to activate yield booster.": "Lock Cake to get veCAKE on BSC to activate yield booster.",
-  "Sync veCAKE again to update yield booster": "Sync veCAKE again to update yield booster"
+  "Sync veCAKE again to update yield booster": "Sync veCAKE again to update yield booster",
+  "Basic": "Basic",
+  "Candlestick": "Candlestick"
 }
