--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3427,5 +3427,9 @@
   "Lock Cake to get veCAKE on BSC to activate yield booster.": "Lock Cake to get veCAKE on BSC to activate yield booster.",
   "Sync veCAKE again to update yield booster": "Sync veCAKE again to update yield booster",
   "Basic": "Basic",
-  "Candlestick": "Candlestick"
+  "Candlestick": "Candlestick",
+  "Fees are lower for Stable LP": "Fees are lower for Stable LP",
+  "Dynamic fee: ↕️ %p%% Fee may vary based on several conditions": "Dynamic fee: ↕️ %p%% Fee may vary based on several conditions",
+  "Static Fee: %p%%": "Static Fee: %p%%",
+  "%p%% Fee Tier": "%p%% Fee Tier"
 }
