--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3458,5 +3458,16 @@
   "on PancakeSwap Perpetuals v2!": "on PancakeSwap Perpetuals v2!",
   "Trade on Perpetuals v2 to Win 300,000 ARB": "Trade on Perpetuals v2 to Win 300,000 ARB",
   "Trade $5,000 on Perps v2 to Win from 300,000 ARB": "Trade $5,000 on Perps v2 to Win from 300,000 ARB",
-  "Trade at least $5,000 on perps v2 to win guaranteed reward": "Trade at least $5,000 on perps v2 to win guaranteed reward"
+  "Trade at least $5,000 on perps v2 to win guaranteed reward": "Trade at least $5,000 on perps v2 to win guaranteed reward",
+  "60,000 ARB in rewards and up to 100% Fund Protection": "60,000 ARB in rewards and up to 100% Fund Protection",
+  "Predict to win 60,000 ARB in rewards and up to 100% Fund Protection": "Predict to win 60,000 ARB in rewards and up to 100% Fund Protection",
+  "Start Prediction": "Start Prediction",
+  "AI-Prediction Market on Arbitrum, Win 60,000 ARB": "AI-Prediction Market on Arbitrum, Win 60,000 ARB",
+  "AI-Prediction Market is live on Arbitrum": "AI-Prediction Market is live on Arbitrum",
+  "PancakeSwap's AI-Prediction Market is now live on Arbitrum.": "PancakeSwap's AI-Prediction Market is now live on Arbitrum.",
+  "60,000 ARB": "60,000 ARB",
+  "in rewards and up to 100% Fund Protection.": "in rewards and up to 100% Fund Protection.",
+  "Predict ETH Price on Arbitrum & Win": "Predict ETH Price on Arbitrum & Win",
+  "60,000 $ARB": "60,000 $ARB",
+  "Reward!": "Reward!"
 }
