chore: Remove console and change text

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -1441,7 +1441,7 @@
   "Stake CAKE to participate in IFOs": "Stake CAKE to participate in IFOs",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.",
   "Chain Head Block": "Chain Head Block",
-  "Latest Subgraph Block": "Latest Subgraph Block",
+  "Latest Sync Block": "Latest Sync Block",
   "Slight delay": "Slight delay",
   "Delayed": "Delayed",
   "Fast": "Fast",
