--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3482,5 +3482,6 @@
   "Switch network to ZKsync for claiming": "Switch network to ZKsync for claiming",
   "Claim Your $ZK Airdrop Rewards!": "Claim Your $ZK Airdrop Rewards!",
   "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim",
-  "Check Eligibility": "Check Eligibility"
+  "Check Eligibility": "Check Eligibility",
+  "Check": "Check"
 }
