chore: fix no quotes error

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3468,5 +3468,6 @@
   "in rewards and up to 100% Fund Protection.": "in rewards and up to 100% Fund Protection.",
   "Predict ETH Price on Arbitrum & Win": "Predict ETH Price on Arbitrum & Win",
   "60,000 $ARB": "60,000 $ARB",
-  "Reward!": "Reward!"
+  "Reward!": "Reward!",
+  "No quotes available for %cryptoCurrency$ right now.": "No quotes available for %cryptoCurrency$ right now."
 }
