fix: build error fix and text change on home page

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -3143,5 +3143,10 @@
   "%percent%% of total supply": "%percent%% of total supply",
   "Your deposit value in USD": "Your deposit value in USD",
   "Min deposit USD": "Min deposit USD",
-  "Savings": "Savings"
+  "Savings": "Savings",
+  "V4 to Fraxtal": "V4 to Fraxtal",
+  "The conjunction of retail and institutional investor": "The conjunction of retail and institutional investor",
+  "Trade crypto instantly in a Decentralized Exchange with simple and intuitive user experience!": "Trade crypto instantly in a Decentralized Exchange with simple and intuitive user experience!",
+  "Fund liquidity pools and earn trading fees! Integration of Frax assets with Pancakeswap liquidity via PCSX": "Fund liquidity pools and earn trading fees! Integration of Frax assets with Pancakeswap liquidity via PCSX",
+  "Open source approach. Empowering developers to innovate, customize & collaborate": "Open source approach. Empowering developers to innovate, customize & collaborate"
 }
