chore: add translation key

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3469,5 +3469,17 @@
   "Predict ETH Price on Arbitrum & Win": "Predict ETH Price on Arbitrum & Win",
   "60,000 $ARB": "60,000 $ARB",
   "Reward!": "Reward!",
-  "%amount% %token% available to claim!": "%amount% %token% available to claim!"
+  "%amount% %token% available to claim!": "%amount% %token% available to claim!",
+  "AirDrop Claimed!": "AirDrop Claimed!",
+  "ZK AirDrop Claimed": "ZK AirDrop Claimed",
+  "AirDrop Claiming": "AirDrop Claiming",
+  "%amount% %token% claimed!": "%amount% %token% claimed!",
+  "GAS FREE": "GAS FREE",
+  "You have successfully claimed from the ZKSync token airdrop campaign!": "You have successfully claimed from the ZKSync token airdrop campaign!",
+  "Congratulations! You are eligible to claim from the ZKSync token airdrop campaign!": "Congratulations! You are eligible to claim from the ZKSync token airdrop campaign!",
+  "Unfortunately, the connected wallet %account% is not eligible for the airdrop campaign.": "Unfortunately, the connected wallet %account% is not eligible for the airdrop campaign.",
+  "Learn more about the campaign": "Learn more about the campaign",
+  "Switch network to ZKsync for claiming": "Switch network to ZKsync for claiming",
+  "Claim Your $ZK Airdrop Rewards!": "Claim Your $ZK Airdrop Rewards!",
+  "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim"
 }
