chore: update UI details

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3481,5 +3481,6 @@
   "Learn more about the campaign": "Learn more about the campaign",
   "Switch network to ZKsync for claiming": "Switch network to ZKsync for claiming",
   "Claim Your $ZK Airdrop Rewards!": "Claim Your $ZK Airdrop Rewards!",
-  "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim"
+  "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim",
+  "Check Eligibility": "Check Eligibility"
 }
