chore: update translation key

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3479,7 +3479,7 @@
   "Congratulations! You are eligible to claim from the ZKSync token airdrop campaign!": "Congratulations! You are eligible to claim from the ZKSync token airdrop campaign!",
   "Unfortunately, the connected wallet %account% is not eligible for the airdrop campaign.": "Unfortunately, the connected wallet %account% is not eligible for the airdrop campaign.",
   "Learn more about the campaign": "Learn more about the campaign",
-  "Switch network to ZKsync for claiming": "Switch network to ZKsync for claiming",
+  "Switch network to ZKSync for claiming": "Switch network to ZKSync for claiming",
   "Claim Your $ZK Airdrop Rewards!": "Claim Your $ZK Airdrop Rewards!",
   "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim",
   "Check Eligibility": "Check Eligibility"
