--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3483,5 +3483,9 @@
   "Claim Your $ZK Airdrop Rewards!": "Claim Your $ZK Airdrop Rewards!",
   "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim",
   "Check Eligibility": "Check Eligibility",
-  "Check": "Check"
+  "Check": "Check",
+  "All Pools": "All Pools",
+  "My Positions": "My Positions",
+  "Earn from LP": "Earn from LP",
+  "Liquidity Pools & Farms": "Liquidity Pools & Farms"
 }
