feat: add TableView uikit & UniversalFarms table list

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3487,5 +3487,7 @@
   "All Pools": "All Pools",
   "My Positions": "My Positions",
   "Earn from LP": "Earn from LP",
-  "Liquidity Pools & Farms": "Liquidity Pools & Farms"
+  "Liquidity Pools & Farms": "Liquidity Pools & Farms",
+  "View pool details": "View pool details",
+  "View info page": "View info page"
 }
