--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3483,11 +3483,6 @@
   "Claim Your $ZK Airdrop Rewards!": "Claim Your $ZK Airdrop Rewards!",
   "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim",
   "Check Eligibility": "Check Eligibility",
-  "Rocker launching your meme career": "Rocker launching your meme career",
   "Check": "Check",
-  "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now.",
-  "Earn Cake and APT with up to 50% apr on 15+ Pools": "Earn Cake and APT with up to 50% apr on 15+ Pools",
-  "Earn Dual Incentives with Yield Farming on Aptos PancakeSwap": "Earn Dual Incentives with Yield Farming on Aptos PancakeSwap",
-  "Stake LP Tokens to Earn Cake and APT": "Stake LP Tokens to Earn Cake and APT",
-  "Read The Guide": "Read The Guide"
+  "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now."
 }
