chore: fix ip whitelisting

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3484,5 +3484,6 @@
   "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim",
   "Check Eligibility": "Check Eligibility",
   "Check": "Check",
-  "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now."
+  "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now.",
+  "No Quotes": "No Quotes"
 }
