--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -1009,9 +1009,6 @@
   "Farm Auctions": "Farm Auctions",
   "auction bunny": "auction bunny",
   "Burnt CAKE": "Burnt CAKE",
-  "Stake %stakingSymbol% - Earn %earningSymbol%": "Stake %stakingSymbol% - Earn %earningSymbol%",
-  "Top Farms": "Top Farms",
-  "Top Syrup Pools": "Top Syrup Pools",
   "Expert Mode": "Expert Mode",
   "Don’t show this again": "Don’t show this again",
   "Global": "Global",
@@ -3484,5 +3481,9 @@
   "2.4 Million $ZK available to claim": "2.4 Million $ZK available to claim",
   "Check Eligibility": "Check Eligibility",
   "Check": "Check",
-  "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now."
+  "Rocker launching your meme career": "Rocker launching your meme career",
+  "Stake LP Tokens to Earn Cake and APT": "Stake LP Tokens to Earn Cake and APT",
+  "Read The Guide": "Read The Guide",
+  "Earn Cake and APT with up to 50% apr on 15+ Pools": "Earn Cake and APT with up to 50% apr on 15+ Pools",
+  "Earn Dual Incentives with Yield Farming on Aptos PancakeSwap": "Earn Dual Incentives with Yield Farming on Aptos PancakeSwap"
 }
