chore: Athletics banner. waiting for links (#10235)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
The focus of this PR is to add a new `AthleticsBanner` component to the
PancakeSwap website.

### Detailed summary
- Added new `AthleticsBanner` component for PancakeSwap website
- Updated translations in `translations.json`
- Imported necessary components and assets for the `AthleticsBanner`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3486,6 +3486,12 @@
   "Read The Guide": "Read The Guide",
   "Earn Cake and APT with up to 50% apr on 15+ Pools": "Earn Cake and APT with up to 50% apr on 15+ Pools",
   "Earn Dual Incentives with Yield Farming on Aptos PancakeSwap": "Earn Dual Incentives with Yield Farming on Aptos PancakeSwap",
+  "Complete tasks for special edition NFTs, merch, and USDT Prises!": "Complete tasks for special edition NFTs, merch, and USDT Prises!",
+  "PancakeSwap Athletic Games:": "PancakeSwap Athletic Games:",
+  "PancakeSwap Games: Get Usdt, Merch, and NFTs": "PancakeSwap Games: Get Usdt, Merch, and NFTs",
+  "PancakeSwap Athletic Games: Get Usdt, Merch, special edition NFTs": "PancakeSwap Athletic Games: Get Usdt, Merch, special edition NFTs",
+  "Get NFTs, merch, and USDT": "Get NFTs, merch, and USDT",
+  "Complete tasks for NFTs, merch, and USDT Prises!": "Complete tasks for NFTs, merch, and USDT Prises!",
   "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now.",
   "No Quotes": "No Quotes"
 }
