feat: mobile UI adaptation

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3492,5 +3492,6 @@
   "View info page": "View info page",
   "Don’t see expected pools?": "Don’t see expected pools?",
   "Don’t see expected tokens?": "Don’t see expected tokens?",
-  "Extend the search": "Extend the search"
+  "Extend the search": "Extend the search",
+  "Search has been extended": "Search has been extended"
 }
