--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3489,5 +3489,9 @@
   "Earn from LP": "Earn from LP",
   "Liquidity Pools & Farms": "Liquidity Pools & Farms",
   "View pool details": "View pool details",
-  "View info page": "View info page"
+  "View info page": "View info page",
+  "Don’t see expected pools?": "Don’t see expected pools?",
+  "Don’t see expected tokens?": "Don’t see expected tokens?",
+  "Extend the search": "Extend the search",
+  "Search has been extended": "Search has been extended"
 }
