chore: update i18n key

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3489,5 +3489,6 @@
   "Earn from LP": "Earn from LP",
   "Liquidity Pools & Farms": "Liquidity Pools & Farms",
   "View pool details": "View pool details",
-  "View info page": "View info page"
+  "View info page": "View info page",
+  "merkl APR": "merkl APR"
 }
