feat: apr component (#10260)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
This PR adds new features and updates existing functionalities related
to farms and pools in the web application.

### Detailed summary
- Added `token0Price`, `token1Price`, `lpApr`, `tvlUsd`, `vol24hUsd`
fields in `type.ts`
- Updated imports in `batcher.ts`, `index.tsx`,
`useMasterChefV2Data.ts`, and other files
- Added `useV2LpTokenTotalSupply` and `useLmPoolLiquidity` hooks
- Modified `usePoolApr` and `usePoolsApr` functions
- Refactored `fetcher.ts` for calculating APR

> The following files were skipped due to too many changes:
`apps/web/src/state/farmsV4/state/poolApr/fetcher.ts`,
`apps/web/src/views/Farms/v4/components/PoolApyButton.tsx`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3490,6 +3490,7 @@
   "Liquidity Pools & Farms": "Liquidity Pools & Farms",
   "View pool details": "View pool details",
   "View info page": "View info page",
+  "merkl APR": "merkl APR",
   "Don’t see expected pools?": "Don’t see expected pools?",
   "Don’t see expected tokens?": "Don’t see expected tokens?",
   "Extend the search": "Extend the search",
