--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3493,5 +3493,7 @@
   "Get NFTs, merch, and USDT": "Get NFTs, merch, and USDT",
   "Complete tasks for NFTs, merch, and USDT Prises!": "Complete tasks for NFTs, merch, and USDT Prises!",
   "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now.",
-  "No Quotes": "No Quotes"
+  "No Quotes": "No Quotes",
+  "Win $50,000in Oort Trading Competition!": "Win $50,000in Oort Trading Competition!",
+  "Trade Oort to win gauranteed prizes!": "Trade Oort to win gauranteed prizes!"
 }
