chore: text mismatch

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3494,6 +3494,6 @@
   "Complete tasks for NFTs, merch, and USDT Prises!": "Complete tasks for NFTs, merch, and USDT Prises!",
   "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now.",
   "No Quotes": "No Quotes",
-  "Win $50,000in Oort Trading Competition!": "Win $50,000in Oort Trading Competition!",
+  "Win $50,000in Oort Trading Competition!": "Win $50,000in OORT Trading Competition!",
   "Trade Oort to win gauranteed prizes!": "Trade Oort to win gauranteed prizes!"
 }
