chore: fix banner full sxreen text

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3495,5 +3495,6 @@
   "No quotes available for %cryptoCurrency% right now.": "No quotes available for %cryptoCurrency% right now.",
   "No Quotes": "No Quotes",
   "Win $50,000 in OORT Trading Competition!": "Win $50,000 in OORT Trading Competition!",
-  "Trade OORT to win gauranteed prizes!": "Trade OORT to win gauranteed prizes!"
+  "Trade OORT to win guaranteed prizes!": "Trade OORT to win guaranteed prizes!",
+  "Win guaranteed prize, leaderboard prize, and daily lucky draws": "Win guaranteed prize, leaderboard prize, and daily lucky draws"
 }
