--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3494,5 +3494,7 @@
   "Don’t see expected pools?": "Don’t see expected pools?",
   "Don’t see expected tokens?": "Don’t see expected tokens?",
   "Extend the search": "Extend the search",
-  "Search has been extended": "Search has been extended"
+  "Search has been extended": "Search has been extended",
+  "Farms only": "Farms only",
+  "of %assetA% per %assetB%": "of %assetA% per %assetB%"
 }
