chore: update popup

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -2203,7 +2203,7 @@
   "Start trading today and get a": "Start trading today and get a",
   "discount on most Swap and StableSwap trading fees": "discount on most Swap and StableSwap trading fees",
   "as well as a": "as well as a",
-  "discount on most Perpetual trading fees": "discount on most Perpetual trading fees",
+  "discount on most Orderbook Perpetual trading fees": "discount on most Orderbook Perpetual trading fees",
   "for a limited period of time*": "for a limited period of time*",
   "Start Now": "Start Now",
   "Affiliate with us, Empower DeFi": "Affiliate with us, Empower DeFi",
