--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -2417,7 +2417,7 @@
   "Claim All": "Claim All",
   "Total cake earned": "Total cake earned",
   "Active friends": "Active friends",
-  "V1 Perp Swap Earn Fee": "V1 Perp Swap Earn Fee",
+  "Orderbook Perp Swap Earn Fee": "Orderbook Perp Swap Earn Fee",
   "Stable Swap Earn Fee": "Stable Swap Earn Fee",
   "V2 Swap Earn Fee": "V2 Swap Earn Fee",
   "V3 Swap Earn Fee": "V3 Swap Earn Fee",
@@ -2611,7 +2611,7 @@
   "Adding liquidity to this V2 pair is currently not available on PancakeSwap UI. Please follow the instructions to resolve it using blockchain explorer.": "Adding liquidity to this V2 pair is currently not available on PancakeSwap UI. Please follow the instructions to resolve it using blockchain explorer.",
   "Base is LIVE!": "Base is LIVE!",
   "PancakeSwap Now Live on Base!": "PancakeSwap Now Live on Base!",
-  "V1 Perpetual": "V1 Perpetual",
+  "Orderbook Perp": "Orderbook Perp",
   "Pairs must be in the PancakeSwap Token list for the following chains (": "Pairs must be in the PancakeSwap Token list for the following chains (",
   "Arbitrum One": "Arbitrum One",
   "Base": "Base",
