--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3471,5 +3471,8 @@
   "in rewards and up to 100% Fund Protection.": "in rewards and up to 100% Fund Protection.",
   "Predict ETH Price on Arbitrum & Win": "Predict ETH Price on Arbitrum & Win",
   "60,000 $ARB": "60,000 $ARB",
-  "Reward!": "Reward!"
+  "Reward!": "Reward!",
+  "network": "network",
+  "apr": "apr",
+  "pool type": "pool type"
 }
