feat: pool details page (#10283)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
This PR focuses on adding pool detail features, including displaying
pool information, handling fees, and improving user experience.

### Detailed summary
- Added `PoolDetail` component with `BreadcrumbNav` and `PoolInfo`
- Implemented `useRouterQuery` and `usePoolData` hooks
- Updated translations and added `chainNameConverter` functions
- Enhanced `FeeTier` component in `FeeTierTooltip`
- Implemented `usePoolSymbol` and `useStablePoolFee` hooks

> The following files were skipped due to too many changes:
`apps/web/src/state/info/hooks.ts`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3469,6 +3469,9 @@
   "Predict ETH Price on Arbitrum & Win": "Predict ETH Price on Arbitrum & Win",
   "60,000 $ARB": "60,000 $ARB",
   "Reward!": "Reward!",
+  "network": "network",
+  "apr": "apr",
+  "pool type": "pool type",
   "%amount% %token% available to claim!": "%amount% %token% available to claim!",
   "AirDrop Claimed!": "AirDrop Claimed!",
   "ZK AirDrop Claimed": "ZK AirDrop Claimed",
