chore: add in asset cdn

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3503,5 +3503,6 @@
   "Predict the ETH price on Arbitrum and participate in the Galxe campaign": "Predict the ETH price on Arbitrum and participate in the Galxe campaign",
   "Earn Allora Points by": "Earn Allora Points by",
   "playing ARB predictions": "playing ARB predictions",
-  "and Galxe campaign!": "and Galxe campaign!"
+  "and Galxe campaign!": "and Galxe campaign!",
+  "Join now": "Join now"
 }
