feat: add Harvest & Stake button

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3511,5 +3511,6 @@
   "Pair info": "Pair info",
   "total tokens locked (TVL)": "total tokens locked (TVL)",
   "volume 24h": "volume 24h",
-  "fee": "fee"
+  "fee": "fee",
+  "CAKE earned": "CAKE earned"
 }
