chore: relocate useeffect

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3496,5 +3496,12 @@
   "No Quotes": "No Quotes",
   "Win $50,000 in OORT Trading Competition!": "Win $50,000 in OORT Trading Competition!",
   "Trade OORT to win guaranteed prizes!": "Trade OORT to win guaranteed prizes!",
-  "Win guaranteed prize, leaderboard prize, and daily lucky draws": "Win guaranteed prize, leaderboard prize, and daily lucky draws"
+  "Win guaranteed prize, leaderboard prize, and daily lucky draws": "Win guaranteed prize, leaderboard prize, and daily lucky draws",
+  "Click here": "Click here",
+  "to enable update notifications": "to enable update notifications",
+  "By Subscribing to PancakeSwap Notifications you will be able to recieve updates on your buy crypto purchases": "By Subscribing to PancakeSwap Notifications you will be able to recieve updates on your buy crypto purchases",
+  "Welcome to PancakeSwap Notifications": "Welcome to PancakeSwap Notifications",
+  "You are now susbscribed and will recieve alerts and updates on PCS features. If you dont want to recieve notifications you can unsubscribe at any time.": "You are now susbscribed and will recieve alerts and updates on PCS features. If you dont want to recieve notifications you can unsubscribe at any time.",
+  "Yaay!. You Are Now Subscribed": "Yaay!. You Are Now Subscribed",
+  "You are now subscribed. You can view your inbox from the notification bell on the navbar": "You are now subscribed. You can view your inbox from the notification bell on the navbar"
 }
