--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3510,6 +3510,7 @@
   "By Subscribing to PancakeSwap Notifications you will be able to recieve updates on your buy crypto purchases": "By Subscribing to PancakeSwap Notifications you will be able to recieve updates on your buy crypto purchases",
   "Welcome to PancakeSwap Notifications": "Welcome to PancakeSwap Notifications",
   "You are now susbscribed and will recieve alerts and updates on PCS features. If you dont want to recieve notifications you can unsubscribe at any time.": "You are now susbscribed and will recieve alerts and updates on PCS features. If you dont want to recieve notifications you can unsubscribe at any time.",
-  "Yaay!. You Are Now Subscribed": "Yaay!. You Are Now Subscribed",
-  "You are now subscribed. You can view your inbox from the notification bell on the navbar": "You are now subscribed. You can view your inbox from the notification bell on the navbar"
+  "Enable PancakeSwap Notifications": "Enable PancakeSwap Notifications",
+  "Congrats You Are Now Subscribed": "Congrats You Are Now Subscribed",
+  "You are now subscribed. To see your notifications you can view your inbox from the notification bell on the navbar": "You are now subscribed. To see your notifications you can view your inbox from the notification bell on the navbar"
 }
